extends Node2D

# audiostreamplayers
@onready var click = $Click
@onready var death = $Death
@onready var footsteps = $Footsteps
@onready var swing = $Swing
@onready var hurt = $Hurt
@onready var knife_wood = $knife_wood
@onready var wood_broken = $wood_broken
@onready var oh_yeah = $oh_yeah
@onready var coin = $coin
@onready var clang = $Clang
